Fixed styling issues with the elements shifting due to scrollbar presence

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,16 @@
  *= require_self
  */
 
- p {
+p {
   margin: 0;
- }
+}
+
+html {
+  overflow-x: hidden; /* Prevent horizontal scroll */
+  scrollbar-gutter: stable;
+}
+
+body {
+  overflow-y: overlay;
+  overflow-x: hidden; /* Prevent horizontal scroll */
+}
