--- a/app/assets/stylesheets/games_list_header.css
+++ b/app/assets/stylesheets/games_list_header.css
@@ -1,7 +1,7 @@
 .games-list-header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 12vh;
   z-index: 100;
   background-color: white;
